--- a/requirements_raspi.txt
+++ b/requirements_raspi.txt
@@ -1,8 +1,8 @@
 numpy
 scipy
-socketIO-client
+socketIO-client==0.7.0
 Adafruit_PCA9685
 Adafruit_BNO055
 picamera
-keras
+keras==1.2.0
 #tensorflow
