--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "car_server.js",
   "dependencies": {
     "express": "^4.15.3",
+    "fs": "0.0.1-security",
     "socket.io": "^1.7.4"
   },
   "devDependencies": {},
